--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+# Python
 *.pyc
 __pycache__/
 db.sqlite3
@@ -7,7 +8,37 @@ venv/
 env/
 staticfiles/
 media/
+
+# Node.js
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.npm
+.yarn-integrity
+
+# Next.js
+.next/
+out/
+
+# Build outputs
+build/
+dist/
+
+# Environment variables
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# IDE and Editor files
 .DS_Store
 *.log
 .idea/
 .vscode/
+*.swp
+*.swo
+*~
+
+# OS generated files
+Thumbs.db
