--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -3,9 +3,13 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
+    "dev": "vite",
+    "build": "vite build",
+    "generate-dist": "npm run build",
+    "start": "vite preview",
+    "next-dev": "next dev",
+    "next-build": "next build",
+    "next-start": "next start",
     "lint": "next lint",
     "test": "jest --watch",
     "test:ci": "jest --ci",
@@ -14,81 +18,87 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "next": "14.0.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "@tanstack/react-query": "^5.14.2",
-    "axios": "^1.6.2",
-    "zustand": "^4.4.7",
-    "react-hook-form": "^7.48.2",
-    "zod": "^3.22.4",
-    "@hookform/resolvers": "^3.3.2",
-    "tailwindcss": "^3.4.0",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
-    "clsx": "^2.0.0",
-    "chart.js": "^4.4.1",
-    "react-chartjs-2": "^5.2.0",
-    "recharts": "^2.10.3",
-    "d3": "^7.8.5",
-    "mapbox-gl": "^3.0.1",
-    "react-map-gl": "^7.1.7",
-    "leaflet": "^1.9.4",
-    "react-leaflet": "^4.2.1",
-    "react-dropzone": "^14.2.3",
-    "react-image-crop": "^11.0.1",
-    "cropperjs": "^1.6.1",
-    "react-cropper": "^2.3.3",
-    "date-fns": "^3.0.6",
-    "dayjs": "^1.11.10",
-    "react-datepicker": "^4.24.0",
-    "framer-motion": "^10.16.16",
-    "react-spring": "^9.7.3",
-    "lottie-react": "^2.4.0",
-    "react-hot-toast": "^2.4.1",
-    "sonner": "^1.3.1",
-    "notistack": "^3.0.1",
-    "swr": "^2.2.4",
-    "socket.io-client": "^4.5.4",
-    "pusher-js": "^8.4.0-rc2",
+    "@hookform/resolvers": "^3.3.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
-    "lucide-react": "^0.303.0",
-    "react-icons": "^4.12.0",
+    "@tanstack/react-query": "^5.14.2",
     "@tensorflow/tfjs": "^4.15.0",
-    "ml5": "^0.12.2"
+    "axios": "^1.6.2",
+    "chart.js": "^4.4.1",
+    "clsx": "^2.0.0",
+    "cropperjs": "^1.6.1",
+    "d3": "^7.8.5",
+    "date-fns": "^3.0.6",
+    "dayjs": "^1.11.10",
+    "framer-motion": "^10.16.16",
+    "leaflet": "^1.9.4",
+    "lottie-react": "^2.4.0",
+    "lucide-react": "^0.303.0",
+    "mapbox-gl": "^3.0.1",
+    "ml5": "^0.12.2",
+    "next": "14.0.4",
+    "notistack": "^3.0.1",
+    "pusher-js": "^8.4.0-rc2",
+    "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-cropper": "^2.3.3",
+    "react-datepicker": "^4.24.0",
+    "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.3",
+    "react-hook-form": "^7.48.2",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.12.0",
+    "react-image-crop": "^11.0.1",
+    "react-intersection-observer": "^9.5.3",
+    "react-leaflet": "^4.2.1",
+    "react-loading-skeleton": "^3.3.1",
+    "react-map-gl": "^7.1.7",
+    "react-select": "^5.8.0",
+    "react-spring": "^9.7.3",
+    "react-tooltip": "^5.24.0",
+    "recharts": "^2.10.3",
+    "socket.io-client": "^4.5.4",
+    "sonner": "^1.3.1",
+    "swr": "^2.2.4",
+    "tailwindcss": "^3.4.0",
+    "zod": "^3.22.4",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
+    "@playwright/test": "^1.40.1",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/typography": "^0.5.10",
+    "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/react": "^14.1.2",
+    "@testing-library/user-event": "^14.5.1",
+    "@types/leaflet": "^1.9.8",
     "@types/node": "^20.10.5",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
-    "@types/leaflet": "^1.9.8",
-    "typescript": "^5.3.3",
-    "@testing-library/react": "^14.1.2",
-    "@testing-library/jest-dom": "^6.1.5",
-    "@testing-library/user-event": "^14.5.1",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "@playwright/test": "^1.40.1",
-    "eslint": "^8.56.0",
-    "eslint-config-next": "14.0.4",
     "@typescript-eslint/eslint-plugin": "^6.15.0",
     "@typescript-eslint/parser": "^6.15.0",
+    "@vitejs/plugin-react": "^4.0.3",
+    "autoprefixer": "^10.4.16",
+    "commitizen": "^4.3.0",
+    "cz-conventional-changelog": "^3.3.0",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "14.0.4",
+    "husky": "^8.0.3",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "lint-staged": "^15.2.0",
+    "postcss": "^8.4.32",
     "prettier": "^3.1.1",
     "prettier-plugin-tailwindcss": "^0.5.9",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.32",
-    "@tailwindcss/forms": "^0.5.7",
-    "@tailwindcss/typography": "^0.5.10",
-    "@tailwindcss/aspect-ratio": "^0.4.2",
-    "husky": "^8.0.3",
-    "lint-staged": "^15.2.0",
-    "commitizen": "^4.3.0",
-    "cz-conventional-changelog": "^3.3.0"
+    "typescript": "^5.3.3",
+    "vite": "^4.4.5"
   },
   "config": {
     "commitizen": {
