--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -1,107 +1,57 @@
 {
-  "name": "smart-crop-advisory-frontend",
-  "version": "1.0.0",
+  "name": "frontend",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest --watch",
-    "test:ci": "jest --ci",
-    "test:e2e": "playwright test",
-    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css,md}\"",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
-    "next": "14.0.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "@tanstack/react-query": "^5.14.2",
-    "axios": "^1.6.2",
-    "zustand": "^4.4.7",
-    "react-hook-form": "^7.48.2",
-    "zod": "^3.22.4",
-    "@hookform/resolvers": "^3.3.2",
-    "tailwindcss": "^3.4.0",
-    "@headlessui/react": "^1.7.17",
-    "@heroicons/react": "^2.0.18",
-    "clsx": "^2.0.0",
-    "chart.js": "^4.4.1",
-    "react-chartjs-2": "^5.2.0",
-    "recharts": "^2.10.3",
-    "d3": "^7.8.5",
-    "mapbox-gl": "^3.0.1",
-    "react-map-gl": "^7.1.7",
-    "leaflet": "^1.9.4",
-    "react-leaflet": "^4.2.1",
-    "react-dropzone": "^14.2.3",
-    "react-image-crop": "^11.0.1",
-    "cropperjs": "^1.6.1",
-    "react-cropper": "^2.3.3",
-    "date-fns": "^3.0.6",
-    "dayjs": "^1.11.10",
-    "react-datepicker": "^4.24.0",
-    "framer-motion": "^10.16.16",
-    "react-spring": "^9.7.3",
-    "lottie-react": "^2.4.0",
-    "react-hot-toast": "^2.4.1",
-    "sonner": "^1.3.1",
-    "notistack": "^3.0.1",
-    "swr": "^2.2.4",
-    "socket.io-client": "^4.5.4",
-    "pusher-js": "^8.4.0-rc2",
-    "@radix-ui/react-alert-dialog": "^1.0.5",
-    "@radix-ui/react-dialog": "^1.0.5",
-    "@radix-ui/react-dropdown-menu": "^2.0.6",
-    "@radix-ui/react-select": "^2.0.0",
-    "@radix-ui/react-tabs": "^1.0.4",
-    "@radix-ui/react-toast": "^1.1.5",
-    "lucide-react": "^0.303.0",
-    "react-icons": "^4.12.0",
-    "@tensorflow/tfjs": "^4.15.0",
-    "ml5": "^0.12.2"
+    "@headlessui/react": "^2.2.0",
+    "@hookform/resolvers": "^5.2.1",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-tabs": "^1.1.13",
+    "@tanstack/react-query": "^5.87.4",
+    "axios": "^1.12.1",
+    "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "framer-motion": "^12.23.12",
+    "next": "^15.5.3",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "react-dropzone": "^14.3.8",
+    "react-hook-form": "^7.62.0",
+    "react-hot-toast": "^2.6.0",
+    "react-map-gl": "^8.0.4",
+    "recharts": "^3.2.0",
+    "socket.io-client": "^4.8.1",
+    "tailwind-merge": "^3.3.1",
+    "zod": "^4.1.8",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
-    "@types/node": "^20.10.5",
-    "@types/react": "^18.2.45",
-    "@types/react-dom": "^18.2.18",
-    "@types/leaflet": "^1.9.8",
-    "typescript": "^5.3.3",
-    "@testing-library/react": "^14.1.2",
-    "@testing-library/jest-dom": "^6.1.5",
-    "@testing-library/user-event": "^14.5.1",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "@playwright/test": "^1.40.1",
-    "eslint": "^8.56.0",
-    "eslint-config-next": "14.0.4",
-    "@typescript-eslint/eslint-plugin": "^6.15.0",
-    "@typescript-eslint/parser": "^6.15.0",
-    "prettier": "^3.1.1",
-    "prettier-plugin-tailwindcss": "^0.5.9",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.32",
-    "@tailwindcss/forms": "^0.5.7",
-    "@tailwindcss/typography": "^0.5.10",
-    "@tailwindcss/aspect-ratio": "^0.4.2",
-    "husky": "^8.0.3",
-    "lint-staged": "^15.2.0",
-    "commitizen": "^4.3.0",
-    "cz-conventional-changelog": "^3.3.0"
-  },
-  "config": {
-    "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
-    }
-  },
-  "lint-staged": {
-    "*.{js,jsx,ts,tsx}": [
-      "eslint --fix",
-      "prettier --write"
-    ],
-    "*.{json,css,md}": [
-      "prettier --write"
-    ]
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4",
+    "@testing-library/jest-dom": "^6.8.0",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "eslint": "^9",
+    "eslint-config-next": "15.5.3",
+    "eslint-config-prettier": "^9.1.0",
+    "jest": "^30.1.3",
+    "jest-environment-jsdom": "^30.1.2",
+    "prettier": "^3.4.2",
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
