--- a/Frontend/tsconfig.json
+++ b/Frontend/tsconfig.json
@@ -17,17 +17,17 @@
       {
         "name": "next"
       }
-],
-"forceConsistentCasingInFileNames": true,
+    ],
+    "forceConsistentCasingInFileNames": true,
     "paths": {
       "@/*": ["./src/*"],
       "@/components/*": ["./components/*"],
-      "@/lib/*": ["./lib/*"],
-      "@/hooks/*": ["./lib/hooks/*"],
-      "@/types/*": ["./lib/types/*"],
-      "@/api/*": ["./lib/api/*"],
-      "@/store/*": ["./lib/store/*"],
-      "@/utils/*": ["./lib/utils/*"],
+      "@/lib/*": ["lib1/*"],
+      "@/hooks/*": ["lib1/hooks/*"],
+      "@/types/*": ["lib1/types/*"],
+      "@/api/*": ["lib1/api/*"],
+      "@/store/*": ["lib1/store/*"],
+      "@/utils/*": ["lib1/utils/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
