--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -12,8 +12,8 @@ django-filter==23.3
 django-environ==0.11.2
 
 # MongoDB Support - Primary Database
-mongoengine==0.27.0
-pymongo==4.8.0
+mongoengine==0.28.2
+pymongo==4.6.1
 dnspython==2.4.2
 django-rest-framework-mongoengine==3.4.1
 
@@ -216,6 +216,7 @@ MarkupPy==1.18
 odfpy==1.4.1
 xlrd==2.0.2
 xlwt==1.3.0
+django-robots==6.1
 
 # File Processing
 openpyxl==3.1.2
