--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -1,7 +1,7 @@
 # =====================================================
 # SmartCropAdvisory Requirements - Python 3.11
 # MongoDB-Only Configuration
-# Updated: 2025-09-13 - Exact versions from pip list
+# Updated: 2025-09-16 - Exact versions from pip list
 # =====================================================
 
 # Core Django Framework
@@ -35,7 +35,7 @@ drf-spectacular==0.26.5
 drf-yasg==1.21.7
 
 # Authentication & Security
-djangorestframework-simplejwt==5.5.1  # Updated from 5.3.0
+djangorestframework_simplejwt==5.5.1
 django-allauth==0.57.0
 cryptography==41.0.7
 pycryptodome==3.19.0
@@ -57,10 +57,11 @@ opencv-python-headless==4.11.0.86
 # Machine Learning
 scikit-learn==1.3.2
 joblib==1.3.2
+threadpoolctl==3.6.0
 
 # Deep Learning
 tensorflow==2.15.0
-tensorflow-macos==2.15.0  # If on macOS
+tensorflow-macos==2.15.0
 keras==2.15.0
 tensorboard==2.15.0
 tensorboard-data-server==0.7.2
@@ -80,7 +81,7 @@ libclang==16.0.6
 ml-dtypes==0.2.0
 opt-einsum==3.3.0
 termcolor==2.4.0
-typing-extensions==4.8.0
+typing_extensions==4.8.0
 wrapt==1.14.1
 Werkzeug==3.0.1
 Markdown==3.5.2
@@ -148,7 +149,7 @@ click-plugins==1.1.1
 click-repl==0.3.0
 python-crontab==3.3.0
 django-timezone-field==7.1
-cron-descriptor==2.0.6
+cron_descriptor==2.0.6
 
 # =====================================================
 # Development Tools
@@ -163,7 +164,7 @@ black==23.12.1
 flake8==6.1.0
 isort==5.13.2
 mypy==1.7.1
-mypy-extensions==1.1.0
+mypy_extensions==1.1.0
 mccabe==0.7.0
 pycodestyle==2.11.1
 pyflakes==3.1.0
@@ -188,7 +189,7 @@ pluggy==1.6.0
 click==8.1.7
 tqdm==4.66.1
 colorama==0.4.6
-prompt-toolkit==3.0.52
+prompt_toolkit==3.0.52
 wcwidth==0.2.13
 
 # Data Processing
@@ -211,7 +212,7 @@ crispy-bootstrap5==2023.10
 django-appconf==1.1.0
 diff-match-patch==20241021
 tablib==3.5.0
-et-xmlfile==2.0.0
+et_xmlfile==2.0.0
 MarkupPy==1.18
 odfpy==1.4.1
 xlrd==2.0.2
@@ -231,7 +232,7 @@ defusedxml==0.7.1
 # =====================================================
 
 gunicorn==21.2.0
-uvicorn[standard]==0.24.0
+uvicorn==0.24.0
 uvloop==0.21.0
 httptools==0.6.4
 websockets==15.0.1
@@ -264,6 +265,6 @@ pip==25.2
 
 # Authentication Dependencies
 pyasn1==0.6.1
-pyasn1-modules==0.4.2
+pyasn1_modules==0.4.2
 python3-openid==3.2.0
 uritemplate==4.2.0
