--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -58,6 +58,7 @@
     "recharts": "^2.10.3",
     "socket.io-client": "^4.5.4",
     "sonner": "^1.3.1",
+    "styled-jsx": "^5.1.7",
     "swr": "^2.2.4",
     "tailwindcss": "^3.4.0",
     "zod": "^3.22.4",
@@ -73,8 +74,8 @@
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.1",
     "@types/leaflet": "^1.9.8",
-    "@types/node": "^20.10.5",
-    "@types/react": "^18.2.45",
+    "@types/node": "20.19.17",
+    "@types/react": "18.3.24",
     "@types/react-dom": "^18.2.18",
     "@typescript-eslint/eslint-plugin": "^6.15.0",
     "@typescript-eslint/parser": "^6.15.0",
@@ -90,7 +91,7 @@
     "postcss": "^8.4.32",
     "prettier": "^3.1.1",
     "prettier-plugin-tailwindcss": "^0.5.9",
-    "typescript": "^5.3.3"
+    "typescript": "5.9.2"
   },
   "config": {
     "commitizen": {
